--- a/sitio/css/estilos.css
+++ b/sitio/css/estilos.css
@@ -13,6 +13,7 @@ body{
 #gradiente{
     background: rgb(215,143,183);
     background: linear-gradient(180deg, rgba(215,143,183,1) 0%, rgba(201,185,241,1) 100%);
+    padding-bottom: 50px;
 }
     header{
         width: 1100px;
@@ -39,6 +40,10 @@ body{
             padding: 14px;
         }
 
+    #gradiente h1{
+        width: 1100px;
+        margin: auto;
+    }
 
 /* MAIN */
 main{
