--- a/sitio/css/estilos.css
+++ b/sitio/css/estilos.css
@@ -5,6 +5,11 @@
     padding: 0px;
     box-sizing: border-box;
 }
+html, body {
+    width: 100%;
+    overflow-x: hidden;
+}
+
 body{
     font-family: Raleway, sans-serif;
     font-weight: 300;
